Project saga_be {
  database_type: 'MySQL'
  Note: 'Figure 2.3 - Database schema: Project and team'
}

Table project_type {
  id char(36) [pk, not null]
  code varchar(64) [not null, unique]
  name varchar(255) [not null]
  description varchar(1000)
  criteria_config text
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table project {
  id char(36) [pk, not null]
  course_id char(36) [not null]
  project_type_id char(36)
  name varchar(255) [not null]
  description mediumtext
  repository_url varchar(500)
  created_by_user_id char(36)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table team {
  id char(36) [pk, not null]
  course_id char(36) [not null]
  team_no int [not null]
  project_id char(36) [unique]
  name varchar(255) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table team_member {
  id char(36) [pk, not null]
  team_id char(36) [not null]
  course_id char(36) [not null]
  course_enrollment_id char(36) [not null, unique]
  role_in_team varchar(32) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Ref: project.project_type_id > project_type.id
Ref: team.project_id - project.id
Ref: team_member.team_id > team.id
